--- a/.dvcignore
+++ b/.dvcignore
@@ -1,3 +1,7 @@
-# Add patterns of files dvc should ignore, which could improve
-# the performance. Learn more at
-# https://dvc.org/doc/user-guide/dvcignore
+# Файлы, которые DVC должен игнорировать
+.env
+*.log
+logs/
+__pycache__/
+.ipynb_checkpoints
+.DS_Store
